# EduPortal

./: Makefile  pyproject.toml  setup.cfg
.github/workflows/: auth-service-ci.yml
eduportal/services/auth_service/: Dockerfile  pyproject.toml
eduportal/services/auth_service/core/: security.py
eduportal/services/auth_service/core/dependencies/: constructors.py  fastapi.py
eduportal/services/auth_service/core/exceptions/: abc.py  user.py
eduportal/services/auth_service/lib/db/: user.py
eduportal/services/auth_service/lib/models/: user.py
eduportal/services/auth_service/lib/schemas/: user.py
